src/tui/render/snapshots/frame__tui__render__inbox_view__tests__inbox_in_edit_mode.snap
---
source: src/tui/render/inbox_view.rs
expression: output
---
▎ 1  New item text
      Some body text here.

  2  Second item  #design

  3  Third item
