src/tui/render/snapshots/frame__tui__render__inbox_view__tests__inbox_with_items.snap
---
source: src/tui/render/inbox_view.rs
expression: output
---
▎ 1  First inbox item  #bug
      Some body text here.

  2  Second item  #design

  3  Third item
